fix input border radius on ios

--- a/src/styles/components/mdl-overrides.scss
+++ b/src/styles/components/mdl-overrides.scss
@@ -1,3 +1,7 @@
 .mdl-textfield {
   width: 100%;
 }
+
+.mdl-textfield__input {
+  border-radius: 0;
+}
